[Qt] fast/workers/stress-js-execution.html is crashing on Qt bot (intermittently) https://bugs.webkit.org/show_bug.cgi?id=33008

Reviewed by Andreas Kling.

Source/JavaScriptCore:

Defining WTF_USE_PTHREAD_BASED_QT=1 for platforms where QThread uses pthread internally.
Symbian is excluded because pthread_kill does not work on it. Mac is excluded because
it has its own ways to do JSC threading.

Defining WTF_USE_PTHREADS inside MachineStackMarker.cpp if USE(PTHREAD_BASED_QT) is true.

* runtime/MachineStackMarker.cpp:
* wtf/Platform.h:

LayoutTests:

Removing several tests from the Qt skip list. Those tests were flaky because of race conditions
related to web workers.

* platform/qt/Skipped:

Canonical link: https://commits.webkit.org/70634@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80746 268f45cc-cd09-0410-ab3c-d52691b4dbfc