Source/JavaScriptCore/runtime/MachineStackMarker.cpp
@@ -29,6 +29,10 @@
 #include <setjmp.h>
 #include <stdlib.h>
 
+#if USE(PTHREAD_BASED_QT) && !defined(WTF_USE_PTHREADS)
+#define WTF_USE_PTHREADS 1
+#endif
+
 #if OS(DARWIN)
 
 #include <mach/mach_init.h>
